[package]
name = "ded-lock"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
rev = "0f25bf0e254159e9900767aa456f9839bb9e6fa1"
default-features = false
features = ["rt-threaded"]
