[package]
name = "ded-lock"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
rev = "5eb462a0295ab50a1842e31d67741a609024160f"
default-features = false
features = ["rt-threaded"]
