[package]
name = "ded-lock"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
git = "https://github.com/tokio-rs/tokio"
rev = "3d52204ed2967c7ecdc4e450f45bc7ceada968db"
default-features = false
features = ["rt-threaded"]
